--- a/apps/trips/templates/trips/index.html
+++ b/apps/trips/templates/trips/index.html
@@ -49,6 +49,10 @@
          js.src = "https://connect.facebook.net/en_US/sdk.js";
          fjs.parentNode.insertBefore(js, fjs);
        }(document, 'script', 'facebook-jssdk'));
+
+      FB.getLoginStatus(function(response) {
+          statusChangeCallback(response);
+      });
     </script>
     {% if messages %}
     <ul class="messages">
